# scheduler-email-notification

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: notification.py  routers.py  task.py  user.py
app/api/routes/notification/: schema.py
app/config/: __init__.py  database.py
app/database/alembic/: env.py
app/database/alembic/versions/: 0711cff7a742_init.py  9c9f2b55406a_init.py  cf350659df6b_init.py
app/database/models/: Notification.py  Task.py  User.py
app/frontend/: auth.html  auth.js  index.html  register.html  script.js  styles.css
app/frontend/js/: auth-state.js
app/services/: email_service.py
app/services/templates/: deadline_notification.html
